https://github.com/jennifer-11-cmd/swizterlandstockinvestement

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Athen - Invest in Your Future</title>
+    <title>SWITZERLAND Stock Investment - Invest in Your Future</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .notification-bot {
