--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <header class="bg-gray-800 py-10">
         <div class="max-w-7xl mx-auto px-4 grid md:grid-cols-2 items-center">
             <div class="flex items-center space-x-4 mb-6 md:mb-0">
-                <img src="https://via.placeholder.com/50" alt="Athen Logo" class="w-12 h-12 rounded-full" />
+
                 <h1 class="text-4xl font-bold text-yellow-400">SWITZERLAND STOCK Investment</h1>
             </div>
             <div class="text-right">
@@ -62,7 +62,7 @@
         </div>
     </header><!-- Navigation -->
     <nav class="flex justify-center gap-6 bg-gray-700 py-4 text-sm font-semibold">
-        <a href="#about" class="hover:text-teal-400">About</a>
+        <a href="about.html" class="hover:text-teal-400">About</a>
         <a href="#services" class="hover:text-teal-400">Services</a>
         <a href="#how" class="hover:text-teal-400">How it Works</a>
         <a href="#plans" class="hover:text-teal-400">Pricing</a>
@@ -70,7 +70,7 @@
     </nav>
 
     <!-- About Section -->
-    <section id="about" class="max-w-5xl mx-auto px-4 py-16">
+    <section id="t" class="max-w-5xl mx-auto px-4 py-16">
         <h2 class="text-3xl font-bold text-yellow-400 mb-4">About SWIZTERLAND STOCK Investment</h2>
         <p class="text-lg leading-relaxed">
             Athen is a digital investment platform focused on secure and profitable USDT-based plans. We
