--- a/dashboard.html
+++ b/dashboard.html
@@ -21,7 +21,7 @@
 
         <!-- BTC Price Card -->
         <div class="bg-gray-800 p-6 rounded-2xl shadow-lg col-span-1">
-            <h2 class="text-lg font-semibold mb-2">Wallet Balance</h2>
+            <h2 class="text-lg font-semibold mb-3">Wallet Balance</h2>
             <p class="text-3xl font-bold text-yellow-400" id="btcPrice">$0.00</p>
             <span id="btcChange" class="text-sm"></span>
         </div>
@@ -50,9 +50,9 @@
             <label for="planSelect" class="block mb-2">Select Investment Plan</label>
             <select id="planSelect" class="bg-gray-700 text-white px-3 py-2 rounded w-full">
                 <option value="0">-- Choose a Plan --</option>
-                <option value="100">Starter - $100</option>
-                <option value="500">Silver - $500</option>
-                <option value="1000">Gold - $1,000</option>
+                <option value="100">Starter Plan Invest $100 - $4,999</option>
+                <option value="500">Business Plan Invest $5,000 - $9,999</option>
+                <option value="1000">Professional Plan -Invest $10,000 - $49,999+</option>
             </select>
         </section>
 
