--- a/index.html
+++ b/index.html
@@ -128,19 +128,9 @@
         <h2 class="text-3xl font-bold text-yellow-400 mb-8 text-center">Investment Plans</h2>
         <div class="grid md:grid-cols-3 gap-6">
             <div class="bg-gray-800 p-6 rounded-xl shadow-md">
-                <h3 class="text-xl font-semibold mb-2">Starter</h3>
-                <p>Invest $100 - $999</p>
+                <h3 class="text-xl font-semibold mb-2">Starter Plan</h3>
+                <p>Invest $100 - $4,999</p>
                 <p>Profit: 5% Weekly</p>
-                <p>Referral Bonus: 3%</p>
-                <br>
-                <a href="register.html"
-                    class="bg-yellow-400 hover:bg-yellow-400 text-white py-2 px-6 rounded-full font-semibold">Get
-                    Started</a>
-            </div>
-            <div class="bg-gray-800 p-6 rounded-xl shadow-md">
-                <h3 class="text-xl font-semibold mb-2">Pro</h3>
-                <p>Invest $1,000 - $4,999</p>
-                <p>Profit: 7% Weekly</p>
                 <p>Referral Bonus: 5%</p>
                 <br>
                 <a href="register.html"
@@ -148,10 +138,20 @@
                     Started</a>
             </div>
             <div class="bg-gray-800 p-6 rounded-xl shadow-md">
-                <h3 class="text-xl font-semibold mb-2">Elite</h3>
-                <p>Invest $5,000 - $10,000+</p>
-                <p>Profit: 10% Weekly</p>
+                <h3 class="text-xl font-semibold mb-2">Business Plan</h3>
+                <p>Invest $5,000 - $9,999</p>
+                <p>Profit: 7% Weekly</p>
                 <p>Referral Bonus: 8%</p>
+                <br>
+                <a href="register.html"
+                    class="bg-yellow-400 hover:bg-yellow-400 text-white py-2 px-6 rounded-full font-semibold">Get
+                    Started</a>
+            </div>
+            <div class="bg-gray-800 p-6 rounded-xl shadow-md">
+                <h3 class="text-xl font-semibold mb-2">Professional Plan</h3>
+                <p>Invest $10,000 - $49,999+</p>
+                <p>Profit: 10% Weekly</p>
+                <p>Referral Bonus: 10%</p>
                 <br>
                 <a href="register.html"
                     class="bg-yellow-400 hover:bg-teal-600 text-white py-2 px-6 rounded-full font-semibold">Get
@@ -173,7 +173,7 @@
     <!-- Statistics -->
     <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-6 text-center px-4 py-4">
         <div class="bg-gray rounded-lg py-6 shadow">
-            <div class="text-3xl font-bold">53,782+</div>
+            <div class="text-3xl font-bold">80,782+</div>
             <div class="mt-1 text-sm font-medium text-gray-600">Account Opened</div>
         </div>
         <div class="bg-gray rounded-lg py-6 shadow">
@@ -248,7 +248,7 @@
         <section id="contact" class="max-w-5xl mx-auto px-4 py-16">
             <h2 class="text-3xl font-bold text-yellow-400 mb-4">Contact Us</h2>
             <p>Email: support@switzerland.com</p>
-            <p>Phone: +234 800 000 0000</p>
+            <p>Phone: +41 44 123 45 67</p>
         </section>
 
 
@@ -262,20 +262,19 @@
 
         <script>
             const notifications = [
-                "Sarah just received 200 USDT",
-                "James just received 150 USDT",
-                "Amina just received 300 USDT",
-                "Carlos just received 100 USDT",
-                "Chidera just received 250 USDT",
-                "Emily just received 350 USDT",
-                "Victor just received 500 USDT",
-                "Liam just received 180 USDT",
-                "Ada just received 220 USDT",
-                "Noah just received 275 USDT",
-                "Zara just received 90 USDT",
-                "Daniel just received 310 USDT",
-                "Tolu just received 190 USDT",
-                "Maya just received 500 USDT"
+                "Sarah just received 5,000 USDT",
+                "James just received 9,999 USDT",
+                "Amina just received 50,000 USDT",
+                "Chidera just received 4,999 USDT",
+                "Emily just received 10,000 USDT",
+                "Victor just received 5,000 USDT",
+                "Liam just received 100,000 USDT",
+                "Ada just received 9,999 USDT",
+                "Noah just received 1,000 USDT",
+                "Zara just received 10,000 USDT",
+                "Daniel just received 49,000 USDT",
+                "Tolu just received 300,000 USDT",
+                "Maya just received 5,999 USDT"
             ];
 
             function showNotification(message) {
