--- a/login.html
+++ b/login.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Athen - Login</title>
+    <title>switzerland - Login</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="bg-gray-900 text-white">
     <div class="min-h-screen flex items-center justify-center">
-        <form action="https://api.staticforms.xyz/submit" method="POST" class="space-y-4">
+        <form action="https://api.staticforms.xyz/submit" method="POST"
+            class="bg-gray-800 p-8 rounded-lg shadow-lg space-y-4 w-full max-w-md">
             <!-- StaticForms access key -->
             <input type="hidden" name="accessKey" value="sf_l7209c1c36dd7h31l7lb9fg9">
 
