--- a/dashboard.html
+++ b/dashboard.html
@@ -20,7 +20,7 @@
     <main class="p-6 grid grid-cols-1 md:grid-cols-3 gap-6">
 
         <!-- BTC Price Card -->
-        <div class="bg-gray-800 p-6  rounded-2xl shadow-lg col-span-1">
+        <div class="bg-gray-800 p-6/  rounded-2xl shadow-lg col-span-1">
             <h2 class="text-lg font-semibold mb-3">Wallet Balance</h2>
             <p class="text-3xl font-bold text-yellow-400" id="btcPrice">$0.00</p>
             <span id="btcChange" class="text-sm"></span>
