--- a/dashboard.html
+++ b/dashboard.html
@@ -22,7 +22,7 @@
         <!-- BTC Price Card -->
         <div class="bg-gray-800 p-6/  rounded-2xl shadow-lg col-span-1">
             <h2 class="text-lg font-semibold mb-3">Wallet Balance</h2>
-            <p class="text-3xl font-bold text-yellow-400" id="btcPrice">$0.00</p>
+            <p class="text-3xl font-bold text-yellow-400" id="counter">$0.00</p>
             <span id="btcChange" class="text-sm"></span>
         </div>
 
@@ -79,7 +79,33 @@
         </div>
 
     </main>
+    <script>
+        let stepTime = 6000;   // 1 minute in ms
+        let startCents = 10000; // $100
+        let endCents = 1000000; // $10,000
+        let counter = document.getElementById("counter");
 
+        // Load or set start time
+        let startTime = localStorage.getItem("counterStartTime");
+        if (!startTime) {
+            startTime = Date.now();
+            localStorage.setItem("counterStartTime", startTime);
+        }
+
+        function updateCounter() {
+            let elapsed = Date.now() - startTime;
+            let steps = Math.floor(elapsed / stepTime);
+            let cents = startCents + steps;
+
+            if (cents > endCents) cents = endCents; // Cap at $10,000
+
+            counter.textContent = "$" + (cents / 100).toFixed(2);
+        }
+
+        // Update immediately and then every second
+        updateCounter();
+        setInterval(updateCounter, 1000);
+    </script>
     <script>
         const investedAmount = 10000;
         let btcChart;
